# InsightBoard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/app/: cli.py  main.py
backend/app/api/v1/: __init__.py  deps.py
backend/app/api/v1/endpoints/: metrics.py  websocket.py
backend/app/api/v1/routers/: auth.py  dashboards.py
backend/app/core/: config.py  database.py  security.py
backend/app/migrations/: env.py  script.py.mako
backend/app/migrations/versions/: 20251021_initial_schema.py
backend/app/models/: dashboard.py  metric.py  user.py
backend/app/schemas/: dashboard.py  metric.py  user.py
backend/app/services/: auth_service.py  dashboard_service.py  data_generator.py  kafka_consumer.py  kafka_producer.py  metric_service.py  redis_service.py
backend/app/tests/: conftest.py  test_health.py
backend/app/tests/integration/: test_dashboards_crud.py  test_metrics_crud.py  test_metrics_ingestion.py  test_websocket.py
backend/app/tests/unit/: test_auth.py  test_cli.py  test_data_generator.py  test_database.py  test_kafka_mocked.py  test_main.py  test_models.py  test_redis_service.py  test_services.py
frontend/: .eslintrc.json  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: MetricCard.tsx  MetricChart.tsx
frontend/src/components/__tests__/: MetricCard.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/contexts/__tests__/: AuthContext.test.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/pages/__tests__/: Login.test.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/services/__tests__/: api.test.ts
frontend/src/test/mocks/: handlers.ts
infra/prometheus/: prometheus.yml
